[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raygun4py"
dynamic = ["version"]
authors = [{ name = "Raygun", email = "hello@raygun.io" }]
description = "Official Raygun provider for Python"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
dependencies = [
    "jsonpickle>=4.0.4",
    "blinker>=1.3.0",
    "requests>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "unittest2>=1.1.0",
    "coveralls>=1.5.1",
    "mock>=2.0.0",
    "django>=3.2",
    "flask>=2.0",
    "WebTest>=2.0.32",
    "ruff",
    "coverage",
]

[project.scripts]
raygun4py = "raygun4py.cli:main"

[project.urls]
Homepage = "https://raygun.com"
Documentation = "https://raygun.com/documentation/language-guides/python/crash-reporting/installation/"
Repository = "https://github.com/MindscapeHQ/raygun4py"
Changelog = "https://github.com/MindscapeHQ/raygun4py/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "python3/raygun4py/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/python3/raygun4py",
    "/README.rst",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["python3/raygun4py"]

[tool.hatch.build.targets.wheel.sources]
"python3/raygun4py" = "raygun4py"

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/site-packages/*",
    "*/dist-packages/*",
    "*/tests/*",
    "/opt/*",
]
exclude_lines = [
    "pragma: no cover",
    "except Exception as e:",
    "except Exception:",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
