[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raygun4py"
dynamic = ["version"]
authors = [{ name = "Raygun", email = "hello@raygun.io" }]
description = "Official Raygun provider for Python"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
]
dependencies = [
    "jsonpickle>=4.0.4",
    "blinker>=1.3.0",
    "requests>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coveralls>=1.5.1",
    "django>=1.8.8",
    "flask>=0.10",
    "WebTest>=2.0.32",
    "ruff",
    "mypy>=1.0",
    "types-requests",
]

[project.scripts]
raygun4py = "raygun4py.cli:main"

[project.urls]
Homepage = "https://raygun.com"
Documentation = "https://raygun.com/documentation/language-guides/python/crash-reporting/installation/"
Repository = "https://github.com/MindscapeHQ/raygun4py"
Changelog = "https://github.com/MindscapeHQ/raygun4py/blob/master/CHANGELOG.md"

[tool.hatch.version]
path = "python3/raygun4py/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/python3/raygun4py",
    "/README.rst",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["python3/raygun4py"]

[tool.hatch.build.targets.wheel.sources]
"python3/raygun4py" = "raygun4py"

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/site-packages/*",
    "*/dist-packages/*",
    "*/tests/*",
    "/opt/*",
]
exclude_lines = [
    "pragma: no cover",
    "except Exception as e:",
    "except Exception:",
]

[tool.pytest.ini_options]
testpaths = ["python3/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
files = ["python3/raygun4py"]
exclude = ["python3/tests", "python3/raygun4py/middleware", "python3/raygun4py/cli.py"]

[[tool.mypy.overrides]]
module = ["jsonpickle", "blinker", "webtest.*", "django.*", "flask.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
